@@ -15,6 +15,8 @@ Change log next version
 * Improved parsing of content. If no body expectations are defined then the content is no longer encoded to a data structure before a method such as "asString", "asByteArray" etc is called on the Response object. This really
   increase the performance of Rest Assured when using no body expectations (e.g. get("/something").asString()) (issue 109).
 * Added an "asInputStream" to the Response object. This means that you can now do e.g. "get("/something").asInputStream()" to get the body returned as an input stream.
+* Support for mapping a response content body directly to an Object using either Jackson or Gson for JSON responses and JAXB for XML responses. Usage example: "SomeObject someObject = get("/something").as(SomeObject.class);" 
+  Note that Rest Assured doens't explicitly depend on any of the object mappers explicitly so you need to add them to the classpath manually or using a Maven dependency (issue 19).
  
 Change log 1.3.1 (2011-09-20)
 -----------------------------
